2002-01-28  Stefan Jahn  <stefan@lkcc.org>

	* configure.in (guile_cv_have_uint32_t): Look also in 
	`stdint.h' for uint32_t.

2002-01-13  Neil Jerram  <neil@ossau.uklinux.net>

	* Makefile.am (SUBDIRS): Added lang.

	* configure.in (AC_CONFIG_FILES): Added Makefiles in lang,
	lang/elisp, lang/elisp/internals and lang/elisp/primitives.

2002-01-11  Neil Jerram  <neil@ossau.uklinux.net>

	* acconfig.h (SCM_ENABLE_ELISP): New conditional.

	* configure.in (SCM_ENABLE_ELISP): Define this conditional (or
	not) according to absence (or presence) of `--disable-elisp'
	in the configure args.

2001-12-31  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* TODO: Added two items.

2001-12-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* configure.in (HAVE_MAKEINFO): Check for the makeinfo program and
	set this conditional accordingly.
	
2001-12-01  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* README: Fix virulent typo.

2001-11-25  Marius Vollmer  <mvo@zagadka.ping.de>

	* acconfig.h (HAVE_INLINE): Added template.
	* configure.in (HAVE_INLINE): Define it when the compiler supports
	inline functions.

	* libguile.h: Include "libguile/inline.h".

2001-11-22  Gary Houston  <ghouston@arglist.com>

	* HACKING: Modified the Hacking It Yourself section.  Removed the
	version numbers from the tools.
	HACKING, README, ANON-CVS: updates.

2001-11-21  Gary Houston  <ghouston@arglist.com>

	* HACKING: Removed reference to no longer practiced * in ChangeLog
	convention.

2001-11-19  Thien-Thi Nguyen  <ttn@glug.org>

	* BUGS (11): Set "fixed: no-need".

	* TODO (write emacs/patch.el): New item, self-assigned.

2001-11-19  Rob Browning  <rlb@defaultvalue.org>

	* configure.in: switch to AC_LIBLTDL_INSTALLABLE so we'll use the
	system libltdl when it's available.  Aside from the normal reasons
	to prefer installed shared libs, this means other apps that link
	with libguile and also use libltdl will be more likely to work
	right.

2001-11-17  Dirk Herrmann  <D.Herrmann@tu-bs.de>
