@@ -1,3 +1,11 @@
+2002-01-31  Stefan Jahn  <stefan@lkcc.org>
+
+	* convert.c, convert.h, convert.i.c: New files containing C
+	array to Scheme conversion helpers meant to be replacement 
+	functions for the deprecated gh interface.
+
+	* Makefile.am: Setup rules for new `convert.*' files.
+
 2002-01-28  Stefan Jahn  <stefan@lkcc.org>
 
 	* symbols.c (scm_c_symbol2str): New function, replacement for
