@@ -1,3 +1,8 @@
+2002-01-31  Stefan Jahn  <stefan@lkcc.org>
+
+	* configure.in: Add -DLIBLTDL_DLL_IMPORT to INCLTDL when using
+	`libltdl.dll'.
+
 2002-01-28  Stefan Jahn  <stefan@lkcc.org>
 
 	* configure.in (guile_cv_have_uint32_t): Look also in 
